Fix new tab no style JUMPSCARE

--- a/Profile Folder/chrome/pages/newTabHome/eras.scss
+++ b/Profile Folder/chrome/pages/newTabHome/eras.scss
@@ -14,6 +14,12 @@
 		height: 16px;
 	}
 
+	&:not([geckium-five]) {
+		* {
+			visibility: hidden;
+		}
+	}
+
 	&[geckium-five] {
 		@import "partials/chrome-5/final";
 	}
